@@ -24,7 +24,6 @@ def process_request():
     form = cgi.FieldStorage()
     if form.has_key('domain'):
         domain = form['domain'].value
-        os.chdir('@progsdir@/web')
         import localweb
         if domain == 'index':
             localweb.produce_domain_index(None)
@@ -33,7 +32,6 @@ def process_request():
             localweb.produce_domain_page(data.load_postats(), domain, None)
     elif form.has_key('team'):
         team = form['team'].value
-        os.chdir('@progsdir@/web')
         import localweb
         if team == 'index':
             localweb.produce_team_index(None)
